[gd_scene load_steps=2 format=3 uid="uid://c67jcw2xa6l6q"]

[ext_resource type="Script" uid="uid://clf3fk4phykrs" path="res://scripts/monitor.gd" id="1_gnqr3"]

[node name="Monitor" type="CanvasLayer"]
script = ExtResource("1_gnqr3")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_right = 580.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06053035, 0.06053035, 0.060530342, 1)

[node name="Desktop" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Desktop"]
layout_mode = 0
offset_left = 37.0
offset_top = 132.0
offset_right = 146.0
offset_bottom = 603.0

[node name="TowerStackApp" type="Button" parent="Desktop/GridContainer"]
layout_mode = 2
text = "stack"

[node name="AppContainer" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="Button" parent="."]
offset_left = 1065.0
offset_top = 9.0
offset_right = 1147.0
offset_bottom = 40.0
text = "Close ( X )"

[connection signal="pressed" from="Desktop/GridContainer/TowerStackApp" to="." method="_on_tower_stack_app_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_pressed"]
